--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -222,13 +222,13 @@ refs:
       click:
         handler: handleImageClick
       contextmenu:
-        handler: handleImageContextMenu
+        handler: handleImageClick
   waveform-*:
     eventListeners:
       click:
         handler: handleWaveformClick
       contextmenu:
-        handler: handleWaveformContextMenu
+        handler: handleWaveformClick
   popover-input-*:
     eventListeners:
       input-change:
