--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -221,9 +221,13 @@ refs:
     eventListeners:
       click:
         handler: handleImageClick
+      contextmenu:
+        handler: handleImageClick
   waveform-*:
     eventListeners:
       click:
+        handler: handleWaveformClick
+      contextmenu:
         handler: handleWaveformClick
   popover-input-*:
     eventListeners:
@@ -265,7 +269,7 @@ template:
                 - rtgl-view#image-${field.name} w=${field.width} h=${field.height} bc=ac bw=sm ah=c av=c cur=p p=md:
                     - rtgl-text c=mu-fg ta=c: ${field.placeholderText}
             - $if field.inputType == "waveform" && field.waveformData:
-                - rtgl-waveform#waveform-${field.name} .waveformData=fields[${i}].waveformData w=${field.width} h=${field.height}:
+                - rtgl-waveform#waveform-${field.name} .waveformData=fields[${i}].waveformData w=${field.width} h=${field.height} cur=p:
             - $if field.inputType == "waveform" && !field.waveformData:
                 - rtgl-view#waveform-${field.name} w=${field.width} h=${field.height} bc=ac bw=sm ah=c av=c cur=p p=md:
                     - rtgl-text c=mu-fg ta=c: ${field.placeholderText}
