--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -243,7 +243,7 @@ events:
   extra-event: {}
 
 template:
-  - rtgl-view w=f h=f p=md g=lg ${containerAttrString}:
+  - rtgl-view w=f p=md g=lg ${containerAttrString}:
       - rtgl-view g=sm w=f:
           - rtgl-text s=lg: ${title}
           - rtgl-text c=mu-fg: ${description}
