--- a/packages/rettangoli-sites/package.json
+++ b/packages/rettangoli-sites/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rettangoli/sites-2",
+  "name": "@rettangoli/sites",
   "version": "0.2.0-rc1",
   "description": "Generate static sites using Markdown and YAML. Straightforward, zero-complexity. Complete toolkit for landing pages, blogs, documentation, admin dashboards, and more.git remote add origin git@github.com:yuusoft-org/sitic.git",
   "author": {
