--- a/packages/rettangoli-sites/spec/basic.spec.yaml
+++ b/packages/rettangoli-sites/spec/basic.spec.yaml
@@ -64,3 +64,8 @@ case: fixture012 - Page overwrites static file
 in:
   - fixtures/fixture012
 out: true
+---
+case: fixture-collections - Collections from tags
+in:
+  - fixtures/fixture-collections
+out: true
