--- a/packages/rettangoli-sites/spec/fixtures/fixture-collections/in/pages/about.yaml
+++ b/packages/rettangoli-sites/spec/fixtures/fixture-collections/in/pages/about.yaml
@@ -2,5 +2,9 @@
 title: About Page
 tags: page
 ---
-heading: About Us
-content: This is the about page content.
+- tag: div
+  children:
+    - tag: h2
+      children: About Us
+    - tag: p
+      children: This is the about page content.
