feat(sites): implement custom functions

--- a/packages/rettangoli-sites/spec/basic.spec.yaml
+++ b/packages/rettangoli-sites/spec/basic.spec.yaml
@@ -69,3 +69,8 @@ case: fixture-collections - Collections from tags
 in:
   - fixtures/fixture-collections
 out: true
+---
+case: fixture-custom-functions - Custom functions support
+in:
+  - fixtures/fixture-custom-functions
+out: true
