--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -23,10 +23,11 @@ propsSchema:
       type: function
     no-clear:
       type: boolean
-    showAddOption:
-      type: boolean
-    addOptionLabel:
-      type: string
+    addOption:
+      type: object
+      properties:
+        label:
+          type: string
 
 refs:
   select-button:
