--- a/packages/rettangoli-sites/package.json
+++ b/packages/rettangoli-sites/package.json
@@ -20,6 +20,8 @@
     "jempl": "^0.2.0-rc1",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0",
+    "playwright": "^1.55.0",
+    "ws": "^8.18.0",
     "yahtml": "^0.0.2-rc1"
   },
   "devDependencies": {
