--- a/packages/rettangoli-ui/src/components/pageOutline/pageOutline.view.yaml
+++ b/packages/rettangoli-ui/src/components/pageOutline/pageOutline.view.yaml
@@ -27,8 +27,10 @@ events:
     type: object
 
 template:
-  - rtgl-view h=f w=272:
-    - rtgl-view w=f g=sm mt=xl:
-      - $for item, i in items:
-        - rtgl-view pv=xs av=c href=${item.href}:
-          - rtgl-text s=sm c=${item.c} h-c=fg: ${item.title}
+  - rtgl-view h=f w=272 pr=md:
+      - rtgl-view w=f mt=xl:
+          - $for item, i in items:
+              - rtgl-view d=h bwl=xs bc="${item.bc}" pv=sm av=c href=${item.href} pl=md:
+                  - rtgl-view w=${item.ml}:
+                  - rtgl-text s=sm c=${item.c} h-c=fg: ${item.title}
+
