--- a/packages/rettangoli-sites/package.json
+++ b/packages/rettangoli-sites/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0",
     "playwright": "^1.55.0",
+    "sharp": "^0.34.3",
     "ws": "^8.18.0",
     "yahtml": "^0.0.2-rc1"
   },
