--- a/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
+++ b/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
@@ -1,4 +1,4 @@
-elementName: rtgl-notification
+elementName: rtgl-global-ui
 
 viewDataSchema:
   type: object
@@ -8,7 +8,7 @@ viewDataSchema:
     config:
       type: object
       properties:
-        type:
+        status:
           type: string
         title:
           type: string
@@ -17,6 +17,8 @@ viewDataSchema:
         confirmText:
           type: string
         cancelText:
+          type: string
+        mode:
           type: string
 
 refs:
@@ -37,20 +39,21 @@ template:
   - rtgl-dialog#dialog ?open=${isOpen} s=sm:
       - rtgl-view slot=content g=lg p=lg:
           - rtgl-view d=h ah=c g=md:
-              - $if config.type == 'error':
+              - $if config.status == 'error':
                   - rtgl-icon name=x-circle c=error s=lg:
-                $elif config.type == 'warning':
+                $elif config.status == 'warning':
                   - rtgl-icon name=alert-triangle c=warning s=lg:
-                $elif config.type == 'success':
-                  - rtgl-icon name=check-circle c=success s=lg:
-                $else:
+                $elif config.status == 'info':
                   - rtgl-icon name=info c=primary s=lg:
-              - rtgl-text fs=lg fw=600: ${config.title}
+                $elif config.status:
+                  - rtgl-icon name=check-circle c=success s=lg:
+              - $if config.title:
+                  - rtgl-text fs=lg fw=600: ${config.title}
 
           - rtgl-view p=md:
               - rtgl-text: ${config.message}
 
           - rtgl-view d=h jc=fe g=md mt=lg:
-              - $if config.type == 'confirm':
+              - $if config.mode == 'confirm':
                   - rtgl-button#cancel-button variant=se: ${config.cancelText}
               - rtgl-button#confirm-button variant=pr: ${config.confirmText}
