--- a/packages/rettangoli-ui/rettangoli.config.yaml
+++ b/packages/rettangoli-ui/rettangoli.config.yaml
@@ -102,9 +102,9 @@ vt:
         - title: "Tooltip"
           files: "components/tooltip"
           description: "Tooltip component tests"
-        - title: "Notification"
-          files: "components/notification"
-          description: "Notification component tests"
+        - title: "Global UI"
+          files: "components/globalUi"
+          description: "Global UI component tests"
     - title: "Examples"
       type: "groupLabel"
       items:
