--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "0.0.11-rc25",
+  "version": "0.0.12",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -47,9 +47,9 @@
   "dependencies": {
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
-    "@rettangoli/fe": "workspace:0.0.7-rc16",
+    "@rettangoli/fe": "workspace:0.0.8",
     "@rettangoli/sites": "workspace:0.2.0-rc7",
     "@rettangoli/vt": "workspace:0.0.2-rc3",
-    "@rettangoli/ui": "workspace:0.1.2-rc35"
+    "@rettangoli/ui": "workspace:0.1.3"
   }
 }
