Update the packages to accept MarkdownItAsync, as well as adding a custom md renderer so that the document page can have the code preview

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "rettangoli",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "markdown-it-async": "^2.2.0"
+  }
 }
