--- a/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
+++ b/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
@@ -47,13 +47,11 @@ refs:
     eventListeners:
       click:
         handler: handleCancel
-  dropdown-popover:
+  dropdown-menu:
     eventListeners:
       close:
         handler: handleDropdownClose
-  dropdown-option-*:
-    eventListeners:
-      click:
+      click-item:
         handler: handleDropdownItemClick
 
 template:
@@ -69,14 +67,4 @@ template:
               - $if config.mode == 'confirm':
                   - rtgl-button#cancel-button v=se: ${config.cancelText}
               - rtgl-button#confirm-button v=pr: ${config.confirmText}
-  - rtgl-popover#dropdown-popover ?open=${isDropdownOpen} x=${dropdownConfig.x} y=${dropdownConfig.y} placement=${dropdownConfig.placement}:
-      - rtgl-view wh=300 g=xs slot=content bgc=background br=md:
-          - $for item, i in dropdownConfig.items:
-              - $if item.type == 'label':
-                  - rtgl-view w=f ph=lg pv=md:
-                      - rtgl-text s=sm c=mu-fg: ${item.label}
-                $elif item.type == 'item':
-                  - rtgl-view#dropdown-option-${i} w=f h-bgc=ac ph=lg pv=md cur=p br=md bgc=mu:
-                      - rtgl-text: ${item.label}
-                $elif item.type == 'separator':
-                  - rtgl-view w=f h=1 ph=lg mv=md bgc=bo:
+  - rtgl-dropdown-menu#dropdown-menu ?open=${isDropdownOpen} x=${dropdownConfig.x} y=${dropdownConfig.y} placement=${dropdownConfig.placement} .items=dropdownConfig.items key=dropdown-${isDropdownOpen}:
