--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -48,7 +48,7 @@
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
     "@rettangoli/fe": "workspace:0.0.9",
-    "@rettangoli/sites": "workspace:0.2.0-rc7",
+    "@rettangoli/sites": "workspace:0.2.1",
     "@rettangoli/vt": "workspace:0.0.2-rc3",
     "@rettangoli/ui": "workspace:0.1.4"
   }
