--- a/.github/workflows/release-site.yaml
+++ b/.github/workflows/release-site.yaml
@@ -6,6 +6,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    paths:
+      - "apps/rettangoli.dev/**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -23,7 +25,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +42,10 @@ jobs:
       # Install rtgl CLI globally
       - name: Install rtgl CLI
         run: npm i -g rtgl
+
+      - name: Build
+        working-directory: ./apps/rettangoli.dev
+        run: bun install
 
       - name: Build
         working-directory: ./apps/rettangoli.dev
@@ -71,7 +76,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './_site'
+          path: "./_site"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
